--- a/style.css
+++ b/style.css
@@ -43,5 +43,13 @@ input:focus {
     margin-bottom: 0;
     display: flex;
     align-items: center;
-    
+    justify-content: center;
+}
+
+.weather p {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
 }
